Add user API endpoint
